* Added support for CODIF format in vex files (at least, in the vex2difx parser)
* Don't quit if unused antenna's filelist is absent
* In ANTENNA {} now can set ds_filelist to a list of filelists, each one creating its own DATASTREAM
* oms2v2d: some new functionality to assist VLBA eVLBI
* vex2difx: support override of data frame size with frameSize parametr of DATASTREAM

Version 2.6.0
~~~~~~~~~~~~~
* New DATASTREAM parameter tSys that passes through into .input files
* vexpeek:
  - new --scans option produces a listing of scans in the VEX file,
      useful to help select suitable scans for clock searches in early correlation
  - new --modules option produces listing of media in the TAPELOG_OBS section
* Improved parsing of P-cal $IF if_def entries (vex1.5)
  - parse P-cal base frequency; allows a shifted P-cal
  - finer P-cal spacing; 'float' replaces 'int' in vex2difx and .input
  - Note: P-cal base frequency is not yet supported in .input file
* ANTENNA parameter polConvert can be set to true to indicate desire to perform polarization basis conversion on this antenna.  This will eliminate a warning that is not needed in this case.
* Added parameter exhaustiveAutocorrs to allow correlation of cross-hand autocorrelations when polarisations are in different datastreams
* Support units in the clock rate (e.g., usec/sec).  This change generalizes unit support to allow time in numerators.
* Increase maximum number of allowed IFs from 4 to 32, and catch cases where this gets exceeded.
* Add mk62v2d script and call from vex2script to support mark6 prework to .v2d
* Fix indexing bug in baseline table preparation. Affected zoom band projects where only a subset of antennas is multi-datastream.
* Python scripts explicitly call python2
* difxspeed: allow benchmarking on real data
* remove calc2xyz: was on a dead-end development path
* Version for DiFX-2.6, Mar 4, 2019

Version 2.5.0
~~~~~~~~~~~~~
* Users can now supply comments in one or more COMMENT { } blocks