@@ -1,7 +1,7 @@
 #!/usr/bin/env python3
 
 #**************************************************************************
-#   Copyright (C) 2009-2019 by Walter Brisken                             *
+#   Copyright (C) 2009-2020 by Walter Brisken                             *
 #                                                                         *
 #   This program is free software; you can redistribute it and/or modify  *
 #   it under the terms of the GNU General Public License as published by  *
@@ -37,8 +37,8 @@ from os.path import isfile, isdir
 from os import umask, popen, system
 
 program = 'oms2v2d'
-version = '1.9'
-verdate = '20191226'
+version = '1.10'
+verdate = '20200227'
 author = 'Walter Brisken'
 
 def usage(pgm):
@@ -174,7 +174,10 @@ def getDatacopyAntennaSetup(datacopyInfo, prefix, stn, datacopyFormat):
 	system(cmd)
 
 	# get first line of file
-	firstfile = (open(filelist).readline().split())[0]
+	try:
+		firstfile = (open(filelist).readline().split())[0]
+	except IndexError:
+		return ''
 
 	for machine, filesystem in datacopyInfo:
 		if filesystem in firstfile:
@@ -237,6 +240,9 @@ def writev2d(oms, v2dFile, prefix, nrt, filebased, datacopyFormat, evlbiType, nS
 	out.write('# base .v2d file generated by %s version %s operating on file %s\n\n' % (program, version, omsFile))
 	out.write('vex = %s\n\n' % vexFile)
 	out.write('antennas = %s\n\n' % stnString)
+
+	if nrt or (datacopyFormat != None) or (evlbiType != None):
+		out.write('delayModel = difxcalc+met\n\n')
 
 	if nrt or filebased or (datacopyFormat != None) or (evlbiType != None):
 		machineString = 'swc000, swc001, swc002, swc003, swc004, swc005, swc006, swc007, swc007, swc009, swc010'
